k8s/psych-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psych-api
  namespace: psych
  labels:
    monitor: "true"   
    project: psych-api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: psych-api
  template:
    metadata:
      labels:
        app: psych-api
    spec:
      containers:
        - name: psych-api
          image: mpratyush54/psych-api:backend-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3010
          readinessProbe:
            httpGet:
              path: /metrics
              port: 3010
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /metrics
              port: 3010
            initialDelaySeconds: 15
            periodSeconds: 20
